Fix numbered list clipping on mobile by adding padding

--- a/website_scripts/charm_style_sheet.css
+++ b/website_scripts/charm_style_sheet.css
@@ -453,6 +453,9 @@ img.notion-page-icon {
 .notion-page-content-inner .notion-list-disc {
   padding-inline-start: unset;
 }
+.notion-list-numbered {
+  padding-inline-start: 1.5em;
+}
 
 /* Updated to work with new bullet formatting */
 .notion-page-content-inner
